[package]
name = "starknet_github_metrics"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.0"
serde_json = "1.0.91"
owo-colors = "3"
polars = "0.27.2"

